Safari spends a lot of time in WebCore::findSimpleWordBoundary while selecting text on large scrabutility.com page https://bugs.webkit.org/show_bug.cgi?id=104884

Reviewed by Hajime Morita.

We don't need to do anything in AlternativeTextController if selection is already outside of the editable region.

No new tests are added since this is only a performance improvement, and doesn't change any asymptotic behavior.

* editing/AlternativeTextController.cpp:
(WebCore::AlternativeTextController::respondToChangedSelection):


Canonical link: https://commits.webkit.org/123122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137577 268f45cc-cd09-0410-ab3c-d52691b4dbfc